--- a/themes/fexo/_config.yml
+++ b/themes/fexo/_config.yml
@@ -1,6 +1,6 @@
 # Blog info
 blog_name: BlueSun
-slogan: 写取一枝清瘦竹，秋风江上作渔竿
+slogan: 写取一枝清瘦竹，秋风江上作文章
 
 # Set avatar (Absolute url and relative url)
 avatar: /images/avatar.jpg
