--- a/_config.yml
+++ b/_config.yml
@@ -69,3 +69,14 @@ theme: fexo
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type:
+
+# Extensions
+## Plugins: http://hexo.io/plugins/
+#RSS订阅
+plugin:
+- hexo-generator-feed
+#Feed Atom
+feed:
+type: atom
+path: atom.xml
+limit: 20
