add google analyze

--- a/themes/fexo/_config.yml
+++ b/themes/fexo/_config.yml
@@ -93,7 +93,7 @@ about:
     text_value: 珠海
 
 # Stats
-google_analytics:
+google_analytics: UA-83430919-1
 baidu_analytics: b65b3ffc3fd0d14c968e1036793e631b
 
 # Comment service
